--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -61,7 +61,7 @@
 body {
   min-height: 100vh;
   color: var(--color-text);
-  background: var(--color-background);
+  background-image: linear-gradient(#1e3352, #181e40);
   transition:
     color 0.5s,
     background-color 0.5s;
