feat(components): add pick component

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,2 +1,9 @@
 $blue: #1e3352;
-$radius: 5px
+$radius: 5px;
+$rpsIconWidth: 100;
+
+$rock: #db3b55;
+$paper: #5871F0;
+$scissors: #eca71e;
+
+$color-lists: ("rock": $rock, "paper": $paper, "scissors": $scissors)
