feat: add bonus items

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -5,5 +5,7 @@ $rpsIconWidth: 100;
 $rock: #db3b55;
 $paper: #5871F0;
 $scissors: #eca71e;
+$lizard: #67db69;
+$spock: #e364e8;
 
-$color-lists: ("rock": $rock, "paper": $paper, "scissors": $scissors)
+$color-lists: ("rock": $rock, "paper": $paper, "scissors": $scissors, "lizard": $lizard, "spock": $spock)
