fix: style of pick screen

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -1,6 +1,7 @@
 $blue: #1e3352;
 $radius: 5px;
-$rpsIconWidth: 100;
+$rpsIconWidth: 150;
+$rpsIconBgWidth : calc($rpsIconWidth - 20);
 
 $rock: #db3b55;
 $paper: #5871F0;
